fix:click zones on mobile list

--- a/Frontend/src/app/common/ui/list-table/list-table.component.scss
+++ b/Frontend/src/app/common/ui/list-table/list-table.component.scss
@@ -909,6 +909,7 @@ $orderAnimationTime:$animationTime*5;
     position: absolute;
     top: 25px;
     left: 120px;
+    max-width: 50px;
   }
   .cardList .actionText{
     display:none;
